updated the email content

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<table bgcolor="">
 					<tr>
 						<td>
-							<p class="">This is the email content</p>
+							<p class="">This is the email content Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
 						</td>
 					</tr>
 				</table>
